Fix #4 - Content area placeholders not visible

--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -1,5 +1,7 @@
     .clearfix:after {
-      content: "."; display: block;height: 0;clear: both;font-size: 1px;line-height: 1px;visibility: hidden;
+      content: "";
+      display: table;
+      clear: both;
     }
     
     html, body {
@@ -151,7 +153,6 @@
         height: 10px;
       }
       #content-inner {
-        overflow: hidden;
       padding-bottom: 1px;
       }
     
